--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -118,12 +118,12 @@
                                                 </li>
                                                 <li id="liMyActivity" class="my-activity">
                                                     <a href="/my-activity">
-                                                        <span class="Icon Icon--my-activity Icon--large" id="MyActivitySpan" style="margin-top: 11px;"></span><br /><span class="text">My Activity</span>
+                                                        <span class="Icon Icon--my-activity Icon--large" id="MyActivitySpan"></span><br /><span class="text">My Activity</span>
                                                     </a>
                                                 </li>
                                                 <li id="liFeed" class="feed">
                                                     <a href="@Url.Action("feed", "feed")">
-                                                        <span class="Icon Icon--answers Icon--large" id="PatAnswerSpan" style="margin-top: 11px;"></span><br /><span class="text">Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large" id="PatAnswerSpan"></span><br /><span class="text">Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liFindDoc" class="find-doctors">
@@ -155,22 +155,22 @@
                                             {
                                                 <li id="liAdminQuestions">
                                                     <a href="/admin">
-                                                        <span class="Icon Icon--questions Icon--large" id="adminQuestion" style="margin-top: 11px;"></span><br /><span class="text">Questions</span>
+                                                        <span class="Icon Icon--questions Icon--large" id="adminQuestion"></span><br /><span class="text">Questions</span>
                                                     </a>
                                                 </li>
                                                 <li id="liAdminFeed">
                                                     <a href="@Url.Action("Feed", "Feed")">
-                                                        <span class="Icon Icon--answers Icon--large" id="adminAnswer" style="margin-top: 11px;"></span><br /><span class="text">Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large" id="adminAnswer"></span><br /><span class="text">Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liManageTags">
                                                     <a href="/tags">
-                                                        <span class="Icon Icon--tags Icon--large" id="tags" style="margin-top: 11px;"></span><br /><span class="text">Tags</span>
+                                                        <span class="Icon Icon--tags Icon--large" id="tags"></span><br /><span class="text">Tags</span>
                                                     </a>
                                                 </li>
                                                 <li id="liReports">
                                                     <a href="/reports">
-                                                        <span class="Icon Icon--reports Icon--large" id="reports" style="margin-top: 11px;"></span><br /><span class="text">Reports</span>
+                                                        <span class="Icon Icon--reports Icon--large" id="reports"></span><br /><span class="text">Reports</span>
                                                     </a>
                                                 </li>
                                                 <li id="liManageDoctor">
