--- a/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
+++ b/MiraiConsultMVC/Views/User/PatientSignUp.cshtml
@@ -135,7 +135,7 @@
                                         <label class="cust-font-style">Address:</label>
                                     </div>
                                     <div class="span10 cust-margin-span10">
-                                        @Html.TextAreaFor(m => m.Address, new { @class = "input-block-level cust-lightgreen cust-gray contact_margin", placeholder = "Address", rows = "1", columns = "20" })
+                                        @Html.TextAreaFor(m => m.Address, new { @class = "input-block-level cust-lightgreen cust-gray contact_margin area-box-margin", placeholder = "Address", rows = "1", columns = "20" })
                                     </div>
                                 </div>
                             </div>
