UI issue is resolved

--- a/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
+++ b/MiraiConsultMVC/Views/Patients/similarQuestions.cshtml
@@ -16,7 +16,7 @@
     @Html.ValidationSummary(true)
     {
         <div class="custom-central-div">
-            <div class="row-fluid" style="margin-top:3%">
+            <div class="row-fluid">
                 <div style="margin-top:5%">
                     <div class='row-fluid span7'>
                         <textarea cols="50" id="QuestionText" name="QuestionText" rows="2" onkeyup="Count(this)" maxlength="200" onkeypress="return isEnterPress(event, this);" class="input-block-level txtQuestion_maxwidth custom-green-container">@ViewBag.Question</textarea>
