--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -3959,6 +3959,14 @@ table.cust-table {
     .cust-margin-span10 {
         margin-left: 0px !important;
     }
+    .button-float{
+        float:left;
+    }
+    .form-horizontal .control-label{
+        float:none;
+        padding-top:0;
+        text-align:left;
+    }
 }
   .menu-margin-top{
         margin-top:-32% ;
