--- a/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Patients/PatientQuestionDetails.cshtml
@@ -193,7 +193,7 @@
                         </div>
                         <div class="row-fluid">
                             <div class="span12">
-                                <div class="control-group">
+                                <div class="control-group button-float">
                                     <label class="control-label"></label>
                                     <div class="controls">
                                         <input type="button" class="btn thanx" onclick="return validatedata();" value="Assign" />
