--- a/MiraiConsultMVC/Views/admin/assignquestion.cshtml
+++ b/MiraiConsultMVC/Views/admin/assignquestion.cshtml
@@ -29,9 +29,9 @@
             <div class="row-fluid">
                 <div class="span6">
                     <div class="control-group">
-                        <label class="control-label">Tags:</label>
-                        <div class="controls">
-                                @Html.ListBox(
+                        <label class="control-label" style="width:125px !important">Tags:</label>
+                        <div class="controls button-float">
+                            @Html.ListBox(
                                     "lstOfTags",
                                     ViewBag.tags as MultiSelectList,
                                                 new { @class = "chzn-select max-width" }
@@ -42,7 +42,7 @@
             </div>
             <div class="row-fluid">
                 <div class="span12">
-                    <div class="control-group">
+                    <div class="control-group button-float">
                         <label class="control-label"></label>
                         <div class="controls">
                             <input type="button" id="btnCreateDoctorAccount" onclick="validatedata()" value="Add Tags" class="btn thanx" />
@@ -98,7 +98,7 @@
             </div>
             <div class="row-fluid">
                 <div class="span12">
-                    <div class="control-group">
+                    <div class="control-group button-float">
                         <label class="control-label"></label>
                         <div class="controls">
                             <button type="button" onclick="btnAssign_Click()" class="btn thanx btnAssign" style="display: inline-block !important;">Assign</button>
