Commited The LinkedIn icon in the footer redirects user to the same page on which the icon has been clicked

--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -261,7 +261,7 @@
                         <a href="https://www.facebook.com/" target="_blank">
                             <img src="~/Content/image/bfb.png" class="cust-footer-icon" />
                         </a>&nbsp;
-                        <a href="#" target="_blank">
+                        <a href="http://www.linkedin.com/company/a-square-healthcare-ventures" target="_blank">
                             <img src="~/Content/image/blinkedin.png" class="cust-footer-icon" />
                         </a>
                     </div>
@@ -277,7 +277,7 @@
                         <a href="https://www.facebook.com/" target="_blank">
                             <img src="~/Content/image/bfb.png" class="cust-footer-icon" />
                         </a>&nbsp;
-                        <a href="#" target="_blank">
+                        <a href="http://www.linkedin.com/company/a-square-healthcare-ventures" target="_blank">
                             <img src="~/Content/image/blinkedin.png" class="cust-footer-icon" />
                         </a>
                     </div>
