--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -9,11 +9,11 @@
         <div class="ask-question-div row-fluid hidden-phone">
             <div class="innerdivborders span12">
                 <div class="ask-question-div-title">
-                    @*<p class="div-title-firstp">
-                        Do you have any health related questions?</p>*@
+                    <p class="div-title-firstp">
+                        Do you have any health related questions?</p>
                     <p class="div-title-firsts div-padding">Ask Doctors</p>
-                    @*<p class="askQustion-css">
-                        or see <a href="/topics" class="a-askQuestion-color">answers by topic</a>*@
+                    <p class="askQustion-css">
+                        or see <a href="/topics" class="a-askQuestion-color">answers by topic</a>
 
                 </div>
                 <textarea class="input-block-level Questiontextarea div-askdoctor-padding" id="txtAreaQuestion" onkeyup="Count(this)"
@@ -34,12 +34,12 @@
         <div class="row-fluid visible-phone">
             <div class="span12">
                 <div>
-                    @*<p class="div-title-firstp div-details-margin-left">
+                    <p class="div-title-firstp div-details-margin-left">
                             Do you have any health related questions?
-                        </p>*@
+                        </p>
                     <p class="div-title-firsts div-details-margin-left">Ask Doctors</p>
-                    @*<p class="div-title-firstp div-details-margin-left">
-                        or see <a href="/topics">answer by topic</a>*@
+                    <p class="div-title-firstp div-details-margin-left">
+                        or see <a href="/topics">answer by topic</a>
                 </div>
                 <textarea class="input-block-level Questiontextarea questextarea div-askdoctor-padding textareadiv-margin" id="txtQuestion" onkeyup="Count(this)"
                           placeholder="Type your question here" rows="3" cols="10" maxlength="200" width="100%" onkeypress="return isEnterPress(event, this);" onpaste='return maxLengthPaste(this,"200");'></textarea>
@@ -58,8 +58,8 @@
 <div class="main-outter-padding">
     <div class="row-fluid">
         <div class="span12">
-            <div style="margin-top:2%">
-                <span>Topics</span>|<span>Select the topic you wish to know more</span>
+            <div style="margin-top:1%;margin-bottom:1%">
+                <img alt="img" src="~/Content/image/Home_endorse.png" height="30px" width="35px"><span style="font-size:15px;font-weight:bold;margin-right:20px;margin-left:8px">Topics</span>|<span style="margin-left: 24px; font-size:10px; font-weight: bold">Select the topic you wish to know more</span>
             </div>
         </div>
     </div>
