--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -204,7 +204,7 @@
                     </div>
                     <div class="container topnavbar-position topnavbar-position-bottom-margin unregtopnavbar-left-margin container-padding-top unreg-menu-search">
                         <div class=" row-fluid row-margin-left">
-                            <div class="span8  custom-occupy margin-top-to-tab hidden-phone hidden-tablet btn-margin-top unreg-menu menu-div-margin-top" style="margin-top: -15px; margin-bottom: 10px; border-left: 1px solid #DBDBDB;">
+                            <div class="span8 custom-border-around custom-occupy margin-top-to-tab hidden-phone hidden-tablet btn-margin-top unreg-menu menu-div-margin-top" style="margin-top: -15px; margin-bottom: 10px;">
                                 <div class="divHover" style="margin-left: 2px;">
                                     <a href="http://www.miraihealth.com" target="_blank" class="topmenu-links">Who we are</a>
                                 </div>
