--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -11,7 +11,7 @@
                 <div class="ask-question-div-title">
                     <p class="div-title-firstp">
                         Do you have any health related questions?</p>
-                    <p class="div-title-firsts div-padding">Ask Doctors</p>
+                    <p class="div-title-firsts div-padding">Ask a Doctor</p>
                     <p class="askQustion-css">
                         or see <a href="/topics" class="a-askQuestion-color">answers by topic</a>
 
