--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -221,9 +221,9 @@
                                     <a href="/find-doctors" class="topmenu-links">Our Doctors</a>
                                 </div>
                             </div>
-                            @*<div class="span4 margin-top-to-tab btn-margin-bottom search-div-margin search-width center_align unreg-search topnavbar-btn-margin unreg-margin-left topnavbar-search-margin unregsearch-left-margin" align="center">
+                            <div class="span4 margin-top-to-tab btn-margin-bottom search-div-margin search-width center_align unreg-search topnavbar-btn-margin unreg-margin-left topnavbar-search-margin unregsearch-left-margin" align="center">
                                 @Html.Partial("_AutoCompleteSearch","")
-                            </div>*@
+                            </div>
                         </div>
                     </div>
                     <div class="span8  collapse nav-collapse mobile-menu visible-phone visible-tablet reg-menu-padding" style="width:100%">
