changes in ask a doctor

--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -37,7 +37,7 @@
                     <p class="div-title-firstp div-details-margin-left">
                             Do you have any health related questions?
                         </p>
-                    <p class="div-title-firsts div-details-margin-left">Ask Doctors</p>
+                    <p class="div-title-firsts div-details-margin-left">Ask a Doctor</p>
                     <p class="div-title-firstp div-details-margin-left">
                         or see <a href="/topics">answer by topic</a>
                 </div>
