--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -72,6 +72,7 @@
                         {
                             <a href='@(t.NavigateUrl)' class='@(t.CssClass)' title='@(t.ToolTip + " "+t.TagWeight)'>@t.Text</a>
                         }
+                        <a href="~/topics" style="font-weight:bold"><u>View More Topics</u></a>
                     </p>
                 </div>
             </div>
