--- a/MiraiConsultMVC/Views/User/Login.cshtml
+++ b/MiraiConsultMVC/Views/User/Login.cshtml
@@ -36,9 +36,9 @@
                          @Html.AntiForgeryToken()
                          @Html.ValidationSummary(true)
                     <div class="row-fluid">
-                    <div class="span12">
-                        <div class="span4 pull-left btn-padding-left">
-                            <label class="control-label required form-horizontal control-label">Email ID:</label>
+                        <div class="span12 contact_bottom_margin">
+                            <div class="span4 pull-left btn-padding-left">
+                                <label class="control-label required form-horizontal control-label">Email ID:</label>
                             </div>
                             <div class="span8 pull-right btn-padding-left controls-right-padding">
                                 @Html.TextBoxFor(m => m.Email, new { @class = "input-block-level gray-border txt-position contact_margin input-block-display", maxlength = "40", textmode = "text", placeholder = "Email", display = "dynamic" })
@@ -46,30 +46,28 @@
                             </div>
                         </div>
                     </div>
-                    <br/>
                     <div class="row-fluid">
-                        <div class="span12">
+                        <div class="span12 contact_bottom_margin">
                             <div class="span4 pull-left btn-padding-left">
                                 <label class="control-label required form-horizontal control-label">Password:</label>
-                                </div>
+                            </div>
                             <div class="span8 pull-right btn-padding-left controls-right-padding">
                                 @Html.TextBoxFor(m => m.Password, new { @class = "input-block-level gray-border txt-position contact_margin input-block-display", maxlength = "30", type = "Password", placeholder = "Password" })
                                 @Html.ValidationMessageFor(m => m.Password, string.Empty, new { @class = "validation-summary-errors" })
                             </div>
                         </div>
                     </div>
-                     <br/>
                     <div class="row-fluid">
-                        <div class="span12 btn-padding-left">
-                            <div class="span8 pull-right btn-padding-left controls-right-padding offset4">
-                                @Html.CheckBoxFor(u => u.RememberMe, new { @class = "chkbox" })  <label class="chkLabel">Remember me</label>   
+                        <div class="span12 btn-padding-left contact_bottom_margin">
+                            <div class="span8 pull-right controls-right-padding offset4">
+                                @Html.CheckBoxFor(u => u.RememberMe, new { @class = "chkbox" })  <label class="chkLabel">Remember me</label>
                             </div>
                         </div>
                     </div>
                     
                     <div class="row-fluid">
                         <div class="span12 btn-padding-left">
-                            <div class="span8 pull-right btn-padding-left controls-right-padding offset4">
+                            <div class="span8 pull-right controls-right-padding offset4">
                                 <input id="btnLogin" class="btn thanx gray-border" type="submit" value="Sign in" />
                                 <div class="pull-right">
                                     <a href="/forgot-password" type="checkbox" style="color:#a7af38;font-weight:600; padding-top:5px;">Forgot Password?</a>
