--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -241,10 +241,10 @@
                                     <li>    
                                         <a href="/questions" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--questions Icon--large"></span>
-                                            @if (Convert.ToInt32(@Session["UnQuestionCount"]) != 0)
+                                            @*@if (Convert.ToInt32(@Session["UnQuestionCount"]) != 0)
                                             {
-                                                <span id="unansweredQuestionCount" title="" class="unansweredQuestionCount">@Session["UnQuestionCount"]</span>
-                                            }
+                                                <span id="unansweredQuestionCount"  title="" class="unansweredQuestionCount">@Session["UnQuestionCount"]</span>
+                                            }*@
                                             <span class="rightpaddingdiv text font-bold menutext-margin-top">Questions</span>
                                         </a>
                                     </li>
