--- a/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
+++ b/MiraiConsultMVC/Views/Questions/DoctorQuestionDetails.cshtml
@@ -177,7 +177,7 @@
                                     <div class="row-fluid">
                                         <div class="span6 offset4 btn-padding-left">
                                             <input type="submit" class="btn thanx" value="Submit" onclick="if (!ValidateAllControl()) return false;">
-                                            <input type="reset" class="btn tab_margin cancel gray-border" onclick="window.location.href = window.location.href" value="Reset">
+                                            <input type="reset" class="btn" onclick="window.location.href = window.location.href" value="Clear">
                                         </div>
                                     </div>
                                     <br />
