Commiting RouteConfig.cs and other routes

--- a/MiraiConsultMVC/Views/admin/QuestionList.cshtml
+++ b/MiraiConsultMVC/Views/admin/QuestionList.cshtml
@@ -124,7 +124,7 @@
                 filter = false;
             }
             
-            window.location.href = "../admin/" + filter;
+            window.location.href = "../admin-questions/" + filter;
         });
 
     });
