Fixed The links on the home page should be opened in the new tab

--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -246,11 +246,11 @@
             <div class="cust-inner-footer row-fluid span12">
                 <div class="center_align">
                     <div class="footer-margin-top" style="float:left;width:100%;">
-                        <a href="@Url.Action("PrivacyPolicy","Home")" class="menu-links ">Privacy Policy</a>
+                        <a href="@Url.Action("PrivacyPolicy","Home")" class="menu-links" target="_blank">Privacy Policy</a>
                         <span>|</span>
-                        <a href="@Url.Action("Contact","Home")" class="menu-links ">Contact Us </a>
+                        <a href="@Url.Action("Contact","Home")" class="menu-links" target="_blank">Contact Us </a>
                         <span>|</span>
-                        <a href="@Url.Action("TermsOfUse","Home")" class="menu-links">Terms Of Use</a>
+                        <a href="@Url.Action("TermsOfUse","Home")" class="menu-links" target="_blank">Terms Of Use</a>
                     </div>
                 </div>
                 <div class="hidden-phone">
