--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -67,7 +67,7 @@
 </div>
 @section metatags {
     <meta property="og:title" content="MiraiConsult" />
-    <meta property="og:url" content="@ViewBag.AskmiraiUrl/Home/Home">
+    <meta property="og:url" content="@ViewBag.AskmiraiUrl">
     <meta property="og:image" content="@ViewBag.AskmiraiUrl/Content/image/logoImage.png" />
     <meta property="og:description" content="Healthcare now more accessible and convenient at MiraiConsult" />
     <meta property="og:type" content="website" />
