--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -54,7 +54,7 @@
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("patientquestiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("find-doctors")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("questiondetails") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("similar-questions")
                                         || HttpContext.Current.Request.Url.AbsoluteUri.Contains("forgot-password") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("answers")
-                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("topics"))
+                                        || HttpContext.Current.Request.Url.AbsoluteUri.Contains("topics") || HttpContext.Current.Request.Url.AbsoluteUri.Contains("resetPassword"))
                                         {
                                             <div class="pull-right">
                                                 <ul class="nav">
