Fixed iOS: Toggle for more options is not working properly.

--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -10,11 +10,9 @@
             <div class="innerdivborders span12">
                 <div class="ask-question-div-title">
                     <p class="div-title-firstp">
-                        Do you have any health related questions?</p>
+                        Do you have any health related questions?
+                    </p>
                     <p class="div-title-firsts div-padding">Ask a Doctor</p>
-                    <p class="askQustion-css">
-                        or see <a href="/topics" class="a-askQuestion-color">answers by topic</a>
-
                 </div>
                 <textarea class="input-block-level Questiontextarea div-askdoctor-padding" id="txtAreaQuestion" onkeyup="Count(this)"
                           placeholder="Type your question here" rows="6" cols="15" maxlength="200" onkeypress="return isEnterPress(event, this);" style="width:100%"></textarea>
@@ -35,11 +33,9 @@
             <div class="span12">
                 <div>
                     <p class="div-title-firstp div-details-margin-left">
-                            Do you have any health related questions?
-                        </p>
+                        Do you have any health related questions?
+                    </p>
                     <p class="div-title-firsts div-details-margin-left">Ask a Doctor</p>
-                    <p class="div-title-firstp div-details-margin-left">
-                        or see <a href="/topics">answer by topic</a>
                 </div>
                 <textarea class="input-block-level Questiontextarea questextarea div-askdoctor-padding textareadiv-margin" id="txtQuestion" onkeyup="Count(this)"
                           placeholder="Type your question here" rows="3" cols="10" maxlength="200" width="100%" onkeypress="return isEnterPress(event, this);" onpaste='return maxLengthPaste(this,"200");'></textarea>
@@ -95,11 +91,11 @@
             <meta property="og:description" content="Healthcare now more accessible and convenient at MiraiConsult" />
             <meta property="og:type" content="website" />
         }
-        <script src="~/Content/js/jquery-1.9.1.min.js"></script>
+        @*<script src="~/Content/js/jquery-1.9.1.min.js"></script>*@
         <script src="~/Content/js/bootstrap-transition.js"></script>
         <script src="~/Content/js/bootstrap-alert.js"></script>
         <script src="~/Content/js/bootstrap-modal.js"></script>
-        <script src="~/Content/js/bootstrap-dropdown.js"></script>
+        @*<script src="~/Content/js/bootstrap-dropdown.js"></script>*@
         <script src="~/Content/js/bootstrap-scrollspy.js"></script>
         <script src="~/Content/js/bootstrap-tab.js"></script>
         <script src="~/Content/js/bootstrap-collapse.js"></script>
