Fixed issue of clinic and address value swaps after added on Doctor Profile page

--- a/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
+++ b/MiraiConsultMVC/Views/Doctors/DoctorProfile.cshtml
@@ -1411,9 +1411,9 @@
 
     function validateClinic() {
         var doctorId = document.getElementById("hdnDoctorId").value;
-        var address = document.getElementById("txtClinicName").value;
+        var address = document.getElementById("txtAddress").value;
         var telephone = document.getElementById("txtTelephoneNo").value;
-        var clinicName = document.getElementById("txtAddress").value;
+        var clinicName = document.getElementById("txtClinicName").value;
         var countryId = document.getElementById("hiddenCountryId").value;
         var stateId = document.getElementById("hiddenStateId").value;
         var cityId = document.getElementById("hiddenCityId").value;
